[package]
name = "game_logic"
version = "0.1.0"
edition = "2021"

[dependencies]
rapier2d = { version = "0.19.0", features = ["enhanced-determinism"] }
rand = "0.9.0-alpha.1"
env_logger = "0.11.3"
log = "0.4.21"

[lib]
name = "game_logic_lib"
path = "src/lib.rs"

[[bin]]
name = "game_logic"
path = "src/main.rs"